--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <ul>
                 <li>Reparación de Computadoras</li>
                 <li>Limpieza de Computadoras</li>
-                <li>Programacio: html,css,javascript</li>
+                <li>Programacíon: html,css,javascript</li>
                 <li>Manejo de documentos:online y local</li>
                 <li>Y más</li>
 
