--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="container">
         <div class="header">
             <img src="./Logo.png" alt="Logo">
-            <h1>Se  <span>Vienen</span> Clases</h1>
+            <h1>Se  <span>Vienen</span> Clases IT</h1>
         </div>
         <div class="services">
             <h2>Algunos Cursos</h2>
